--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,7 @@ body {
   border: 2px solid #ff94cf;
   font-weight: bold;
   margin-right: 2rem;
+  cursor: pointer;
 }
 
 .twobtn {
@@ -328,3 +329,23 @@ a {
 h3, p, h1 {
   color: black;
 }
+
+.loader {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
